--- a/packages/dart_dynamics/pages/vision_api_basic/vision_api_basic.css
+++ b/packages/dart_dynamics/pages/vision_api_basic/vision_api_basic.css
@@ -11,3 +11,13 @@ paper-material {
     margin: 10px;
     background-color: white;
 }
+
+
+paper-dialog.size-position {
+    position: fixed;
+    top: 16px;
+    right: 16px;
+    width: 300px;
+    height: 300px;
+    overflow: auto;
+}
