--- a/packages/dart_dynamics/pages/camera_vision/camera_vision.css
+++ b/packages/dart_dynamics/pages/camera_vision/camera_vision.css
@@ -21,3 +21,15 @@ paper-dialog.size-position {
     height: 300px;
     overflow: auto;
 }
+
+.vision_response {
+    position: absolute;
+    left: 640px;
+    top: 0px;
+}
+
+.vision_discription {
+    position: absolute;
+    left: 640px;
+    top: 80px;
+}
